paypal button hiding issue on mobiles

--- a/src/app/components/checkout/checkout.component.css
+++ b/src/app/components/checkout/checkout.component.css
@@ -100,7 +100,7 @@
 }
 #paypal-checkout-btn{
   position: absolute;
-  bottom: 0;
+  bottom: 10px;
   z-index: 1;
   height: 30px;
 }
